# mcp-obsidian

./: Dockerfile  README.md  pyproject.toml
src/mcp_obsidian/: __init__.py  __main__.py  server.py
